force-app/main/default/objects/Placement__c/fields/Administration__c.field-meta.xml
<CustomField>
    <fullName>Administration__c</fullName>
    <label>Administration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>