force-app/main/default/objects/Placement__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Application_for_placements</relationshipName>
    <type>Lookup</type>
</CustomField>