force-app/main/default/objects/Placement__c/fields/Approver_timesheets__c.field-meta.xml
<CustomField>
    <fullName>Approver_timesheets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver timesheets</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Approver timesheets)</relationshipLabel>
    <relationshipName>Timesheets_approver</relationshipName>
    <type>Lookup</type>
</CustomField>