force-app/main/default/objects/Placement__c/fields/Comment_on_pending_extension__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_pending_extension__c</fullName>
    <label>Comment on pending extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>