force-app/main/default/objects/Placement__c/fields/Contracts_Id__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Id__c</fullName>
    <description>This is the ID that is returned when the placement gets posted from VMS -&gt; Hero Salesforce</description>
    <externalId>true</externalId>
    <label>Contracts Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>