force-app/main/default/objects/Placement__c/fields/Current_rate__c.field-meta.xml
<CustomField>
    <fullName>Current_rate__c</fullName>
    <label>Current rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>