force-app/main/default/objects/Placement__c/fields/Date_approval_of_most_recent_extension__c.field-meta.xml
<CustomField>
    <fullName>Date_approval_of_most_recent_extension__c</fullName>
    <description>Neccesary for approval process</description>
    <label>Date approval of most recent extension</label>
    <type>DateTime</type>
</CustomField>