force-app/main/default/objects/Placement__c/fields/Expected_end_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_end_date__c</fullName>
    <label>Expected end date</label>
    <type>Date</type>
</CustomField>