force-app/main/default/objects/Placement__c/fields/Extension_date_near__c.field-meta.xml
<CustomField>
    <fullName>Extension_date_near__c</fullName>
    <formula>AND(
     Expected_end_date__c  &lt;= (TODAY() + 60)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension date near</label>
    <type>Checkbox</type>
</CustomField>