force-app/main/default/objects/Placement__c/fields/General_ledger_account__c.field-meta.xml
<CustomField>
    <fullName>General_ledger_account__c</fullName>
    <label>General ledger account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>