force-app/main/default/objects/Placement__c/fields/Hiring_manager_user__c.field-meta.xml
<CustomField>
    <fullName>Hiring_manager_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring manger user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hiring_manager_user_for_placements</relationshipName>
    <type>Lookup</type>
</CustomField>