force-app/main/default/objects/Placement__c/fields/Hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week__c</fullName>
    <label>Hours per week</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>