force-app/main/default/objects/Placement__c/fields/Initial_end_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_end_date__c</fullName>
    <label>Initial end date</label>
    <type>Date</type>
</CustomField>