force-app/main/default/objects/Placement__c/fields/Notice_period__c.field-meta.xml
<CustomField>
    <fullName>Notice_period__c</fullName>
    <label>Notice period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>