force-app/main/default/objects/Placement__c/fields/Pending_end_new_contract__c.field-meta.xml
<CustomField>
    <fullName>Pending_end_new_contract__c</fullName>
    <label>Pending end new contract</label>
    <type>Date</type>
</CustomField>