force-app/main/default/objects/Placement__c/fields/Pending_hours_new_contract__c.field-meta.xml
<CustomField>
    <fullName>Pending_hours_new_contract__c</fullName>
    <label>Pending hours new contract</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>