force-app/main/default/objects/Placement__c/fields/Pending_rate_new_contract__c.field-meta.xml
<CustomField>
    <fullName>Pending_rate_new_contract__c</fullName>
    <label>Pending rate new contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>