force-app/main/default/objects/Placement__c/fields/Pending_start_new_contract__c.field-meta.xml
<CustomField>
    <fullName>Pending_start_new_contract__c</fullName>
    <label>Pending start new contract</label>
    <type>Date</type>
</CustomField>