force-app/main/default/objects/Placement__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Position_for_placements</relationshipName>
    <type>Lookup</type>
</CustomField>