force-app/main/default/objects/Placement__c/fields/Processing_status__c.field-meta.xml
<CustomField>
    <fullName>Processing_status__c</fullName>
    <label>Processing status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In review by hiring desk</fullName>
            </value>
            <value>
                <fullName>Sent for contracting</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>