force-app/main/default/objects/Placement__c/fields/Professional__c.field-meta.xml
<CustomField>
    <fullName>Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>