force-app/main/default/objects/Placement__c/fields/Professional_responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Professional_responsibilities__c</fullName>
    <label>Professional responsibilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>