force-app/main/default/objects/Placement__c/fields/Purchase_contract_status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_contract_status__c</fullName>
    <label>Purchase contract status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_status</valueSetName>
    </valueSet>
</CustomField>