force-app/main/default/objects/Placement__c/fields/TEST_contracts_id__c.field-meta.xml
<CustomField>
    <fullName>TEST_contracts_id__c</fullName>
    <externalId>true</externalId>
    <label>TEST_contracts_id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>