force-app/main/default/objects/Placement__c/fields/Timesheet_date_notation__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_date_notation__c</fullName>
    <label>Timesheet date notation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timesheet_date_notation</valueSetName>
    </valueSet>
</CustomField>