force-app/main/default/objects/Placement__c/fields/Timesheet_size__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_size__c</fullName>
    <label>Timesheet size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>