force-app/main/default/objects/Placement__c/fields/Timesheets_created_till__c.field-meta.xml
<CustomField>
    <fullName>Timesheets_created_till__c</fullName>
    <label>Timesheets created till</label>
    <type>Date</type>
</CustomField>