force-app/main/default/objects/Placement__c/fields/Travel_distance_per_day__c.field-meta.xml
<CustomField>
    <fullName>Travel_distance_per_day__c</fullName>
    <label>Travel distance per day</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>