force-app/main/default/objects/Placement__c/fields/Travel_expenses_amount__c.field-meta.xml
<CustomField>
    <fullName>Travel_expenses_amount__c</fullName>
    <label>Travel expenses amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>