force-app/main/default/objects/Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Contracts_Id__c</columns>
    <columns>Purchase_contract_status__c</columns>
    <columns>Sales_contract_status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>