force-app/main/default/objects/Placement__c/listViews/Aspen_hiring_desk_Placement.listView-meta.xml
<ListView>
    <fullName>Aspen_hiring_desk_Placement</fullName>
    <filterScope>Queue</filterScope>
    <label>Aspen hiring desk</label>
    <queue>Aspen_hiring_desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>