force-app/main/default/objects/Placement__c/listViews/Hiring_desk_queue_Placement.listView-meta.xml
<ListView>
    <fullName>Hiring_desk_queue_Placement</fullName>
    <filterScope>Queue</filterScope>
    <label>Hiring desk queue</label>
    <queue>Hiring_desk_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>