force-app/main/default/objects/Placement__c/listViews/Mijn_plaatsingen.listView-meta.xml
<ListView>
    <fullName>Mijn_plaatsingen</fullName>
    <columns>NAME</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mijn plaatsingen</label>
</ListView>