force-app/main/default/objects/Placement__c/listViews/Verlengingsdatum_nadert.listView-meta.xml
<ListView>
    <fullName>Verlengingsdatum_nadert</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Extension_date_near__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Verlengingsdatum nadert</label>
</ListView>